# kvakk

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  TODO.md  biome.json  build.rs  package.json  pnpm-workspace.yaml  tauri.conf.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  lint.yml  release-please.yml  release.yml
app/main/: package.json  pnpm-lock.yaml  postcss.config.cjs  vite.config.ts
app/main/src-tauri/: Cargo.toml
app/main/src-tauri/src/: main.rs  notification.rs
app/main/src/vue_lib/assets/: main.postcss
capabilities/: migrated.json
core_lib/: build.rs
core_lib/src/: manager.rs  utils.rs
core_lib/src/hdl/: inbound.rs  mdns_discovery.rs  mod.rs  outbound.rs
docs/: TODO.md
src/: App.vue  main.rs  main.ts
src-tauri/src/: main.rs
src-tauri/src/cmds/: discovery.rs  mod.rs  send_payload.rs  send_to_rs.rs
src-tauri/src/rqs/: channel.rs  lib.rs  manager.rs  utils.rs
src-tauri/src/rqs/hdl/: inbound.rs  info.rs  mdns.rs  mdns_discovery.rs  mod.rs  outbound.rs
src/bindings/: ChannelMessage.ts  Message.ts  MessageClient.ts  TransferAction.ts  TransferKind.ts  TransferMetadata.ts  TransferPayload.ts  TransferPayloadKind.ts  TransferState.ts  index.ts
src/components/: HomePage.vue
src/composables/: ContentStatus.vue  Heading.vue  ItemSide.vue  SideMenu.vue
src/proto_src/: offline_wire_formats.proto
src/rqs/: manager.rs  utils.rs
src/rqs/hdl/: inbound.rs  mdns.rs  mod.rs  outbound.rs
src/vue_lib/: index.ts  types.ts  utils.ts
src/vue_lib/assets/: main.css
src/vue_lib/helper/: ParamsHelper.d.ts
