[package]
name = "rquickshare"
version = "0.11.5"
edition = "2021"
authors = ["martichou"]
repository = "https://github.com/Martichou/rquickshare"
license = "AGPL-3.0"

[lib]
name = "rqs"
path = "src-tauri/src/rqs/lib.rs"

[[bin]]
name = "rquickshare"
path = "src-tauri/src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build = "0.14"

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17", features = ["bluetoothd"], optional = true }

[target.'cfg(all(target_arch = "aarch64", target_os = "linux"))'.dependencies]
dbus = { version = "0.9", features = ["vendored"] }

[dependencies]
# Core library dependencies
anyhow = "1.0"
base64 = "0.22"
btleplug = { version = "0.11", optional = true }
bytes = "1.11"
directories = "6.0"
futures = "0.3"
get_if_addrs = "0.5"
hex = "0.4"
hkdf = "0.12"
hmac = "0.12"
hostname = "0.4"
libaes = "0.7"
log = "0.4"
mdns-sd = { git = "https://github.com/Martichou/mdns-sd", branch = "unsolicited" }
mime_guess = "2.0"
num-bigint = "0.4"
p256 = { version = "0.13", features = ["ecdh"] }
prost = "0.14"
rand = "0.9"
sha2 = "0.10"
uuid = "1.20"

# Tauri dependencies
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["rustls-tls", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "net", "sync", "time", "io-util", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }

[features]
default = ["custom-protocol", "experimental"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]
experimental = ["bluer", "btleplug"]

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev.package."*"]
opt-level = 2
